island sand made, fonts fixed, alignment fixed

--- a/atoms/_typography.scss
+++ b/atoms/_typography.scss
@@ -39,7 +39,7 @@ h2 {
   line-height: 1em;
 }
 h3 {
-  font-family: $fonts-body;
+  font-family: $fonts-headline;
   font-size: 2.25em;
   font-weight: 400; 
   letter-spacing: 1px;
@@ -56,8 +56,10 @@ h4 {
 
 p {
 //   @include set-font(1em, 1.5em);
+  font-family: $fonts-body;
   padding: 0.5em 0;
   margin: 0;
+  font-size: 1.2em;
 }
 
 a {
