--- a/main-styles.css
+++ b/main-styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Boogaloo&family=Montserrat:wght@200;300;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Boogaloo&family=Montserrat:wght@200;300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Boogaloo&family=Montserrat:wght@200;300;400;500&display=swap");
 body {
   background-color: #d2eaf3;
   background-image: linear-gradient(#d2eaf3, #519cbb, #044C6A);
@@ -33,7 +34,7 @@ h2 {
 }
 
 h3 {
-  font-family: "Montserrat", arial, sans-serif;
+  font-family: "Boogaloo", Arial, sans-serif;
   font-size: 2.25em;
   font-weight: 400;
   letter-spacing: 1px;
@@ -51,8 +52,10 @@ h4 {
 }
 
 p {
+  font-family: "Montserrat", arial, sans-serif;
   padding: 0.5em 0;
   margin: 0;
+  font-size: 1.2em;
 }
 
 a {
@@ -67,11 +70,56 @@ a:hover {
 
 .design-selection {
   background-color: #adddf0;
-  height: 300px;
-  position: relative;
-  width: 300px;
-  height: 100%;
-  width: 100%;
+  border-radius: 200px;
+  text-align: center;
+  margin-right: 5px;
+  padding-bottom: 40px;
+}
+.design-selectionul,
+.design-selection li {
+  list-style: none;
+  padding-top: 5px;
+  padding-right: 10px;
+}
+
+.select {
+  padding: 60px 60px 0 60px;
+}
+
+.design-archives {
+  background-color: #adddf0;
+  width: 250px;
+  border-radius: 200px;
+  text-align: center;
+  margin-right: 5px;
+  padding-bottom: 60px;
+  padding-top: 45px;
+  margin-top: 10px;
+}
+.design-archivesul,
+.design-archives li {
+  list-style: none;
+  padding-top: 5px;
+  padding-right: 20px;
+}
+
+.zen-resources {
+  background-color: #adddf0;
+  width: 250px;
+  border-radius: 200px;
+  text-align: center;
+  margin-left: 50px;
+  padding-bottom: 30px;
+  padding-top: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 10px;
+}
+.zen-resourcesul,
+.zen-resources li {
+  list-style: none;
+  padding-top: 5px;
+  padding-right: 30px;
 }
 
 /* allows you to you the names of the variables. */
@@ -80,17 +128,38 @@ body > div {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 25% repeat(3, 1fr);
+  overflow-x: hidden;
+  margin: 0;
 }
 
 .intro {
   grid-column: 1/4;
 }
 
+.summary {
+  background-color: #DeccA0;
+  margin: 1em 0;
+  padding: 1.5em 10em 1.5em 1.5em;
+  border-radius: 0 80% 0 0;
+  width: 50%;
+}
+
+.preamble {
+  grid-column: 1/3;
+  width: 75%;
+  margin-top: 5em;
+  margin-left: 7em;
+}
+
 .main {
+  width: 75%;
+  margin-inline: auto;
   grid-column: 1/3;
   grid-row: 2/6;
 }
 
 .footer {
   grid-row: 6/7;
-}/*# sourceMappingURL=main-styles.css.map */
+}
+
+/*# sourceMappingURL=main-styles.css.map */
